--- a/charts/go-demo-6/values.yaml
+++ b/charts/go-demo-6/values.yaml
@@ -38,3 +38,7 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+go-demo-6-db:
+  replicaSet:
+    enabled: true
+
